--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="w-[75%] flex flex-col gap-5 h-screen">
-    <div class="flex items-start gap-5">
+    <div class="flex items-start gap-5 flex-wrap">
       <% products.forEach(function(product){ %>
       <div class="w-60">
         <div
@@ -39,7 +39,7 @@
         >
           <div>
             <h3><%= product.name %></h3>
-            <h4>₹ <%= product.price %></h4>
+            <h4>$ <%= product.price %></h4>
           </div>
           <a
             class="w-7 h-7 flex items-center justify-center rounded-full bg-white"
