--- a/views/createProducts.ejs
+++ b/views/createProducts.ejs
@@ -59,19 +59,19 @@
           <h3 class="text-lg font-semibold mb-2">Panel Details</h3>
           <div class="grid grid-cols-2 gap-4">
             <input
-              name="bgcolor"
+              name="bgColor"
               type="text"
               placeholder="Background Color"
               class="border p-2 rounded w-full"
             />
             <input
-              name="panelcolor"
+              name="panelColor"
               type="text"
               placeholder="Panel Color"
               class="border p-2 rounded w-full"
             />
             <input
-              name="textcolor"
+              name="textColor"
               type="text"
               placeholder="Text Color"
               class="border p-2 rounded w-full"
