--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,8 +12,17 @@
   </head>
 
   <body class="font-['helvetica_now_display']">
-    <nav class="w-full fixed top-0 left-0 px-5 py-3">
+    <nav class="w-full px-5 py-3 flex justify-between">
       <h3 class="text-xl">CARRYO</h3>
+      <% var loggedIn = typeof loggedIn !== 'undefined' ? loggedIn : 'true' %>
+      <% if(loggedIn) { %>
+      <div class="flex gap-5">
+        <a href="">Shop</a>
+        <a href="">Cart</a>
+        <a href="">My Account</a>
+        <a href="/users/logout" class="text-red-600">Logout</a>
+      </div>
+      <% } %>
     </nav>
   </body>
 </html>
