--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,8 +17,8 @@
       <% var loggedIn = typeof loggedIn !== 'undefined' ? loggedIn : 'true' %>
       <% if(loggedIn) { %>
       <div class="flex gap-5">
-        <a href="">Shop</a>
-        <a href="">Cart</a>
+        <a href="/shop">Shop</a>
+        <a href="/cart">Cart</a>
         <a href="">My Account</a>
         <a href="/users/logout" class="text-red-600">Logout</a>
       </div>
