--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -33,7 +33,7 @@
             <div
               class="w-full flex justify-between items-center px-5 py-4 bg-[<%= item.productId.panelColor %>]"
             >
-              <h3 class="text-2xl font-semibold text-white">
+              <h3 class="text-2xl font-semibold text-black">
                 <%= item.productId.name %>
               </h3>
               <div
