--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
       <div class="flex gap-5">
         <a href="/shop">Shop</a>
         <a href="/cart">Cart</a>
-        <a href="">My Account</a>
+        <a href="/account">My Account</a>
         <a href="/users/logout" class="text-red-600">Logout</a>
       </div>
       <% } %>
